@@ -1,4 +1,7 @@
 v1.4.1 - TBD
+NEW:
+  Added 2 commands to ADDSynthCore that help in determining the number of ore blocks
+    in a given area. Mostly useful to developers.
 FIXED:
   Fixed Fusion Chamber not dropping.
   Fixed Ores that drop an item not being affected by Pickaxes with the Fortune effect.
